Fixed bug that caused urls that were too long to shift towards the middle

--- a/src/css_files/SearchHeader.css
+++ b/src/css_files/SearchHeader.css
@@ -106,14 +106,13 @@
   display: flex;
 }
 
-#url-row {
-  
-  display: flex;
-  /* background-color: white; */
-  margin-right: 1eem;
-  background-color: wh;
-  /* width: 100vw; */
-
+#url-link {
+  display: inline-block;
+  text-decoration: none;
+  color: blue;
+  word-break: break-word;      /* Break long words (like URLs) */
+  overflow-wrap: break-word;   /* Ensure wrapping within the container */
+  max-width: 100%;             /* Prevents overflow */
 }
 
 #url-container {
@@ -129,9 +128,11 @@
 
 #url-link {
   display: flex;
-  justify-content: left;
+  justify-content: flex-start;
   padding-bottom: 4px;
   color: #4285F4;
+  font-size: 16px;
+  text-align: left;
 }
 
 #url-link:hover{
@@ -139,12 +140,11 @@
 }
 
 
-
 #tf-idf-score {
   display: flex;
   justify-content: left;
   margin-left: 2em;
-  font-size: 15px;
+  font-size: 12px;
   color: white;
   /* position: fixed; */
 
